kc-helm-chart-app-main/kc-chart/templates/02-app-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kc-app
  namespace: keepcoding
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kc-app
  template:
    metadata:
      labels:
        app: kc-app
    spec:
      containers:
      - name: kc-app
        image: jhoncytech/kc-final-project-app:v1.0.129
        ports:
        - containerPort: 80
        volumeMounts:
        - name: access-logs
          mountPath: /var/www/html/logs
      volumes:
      - name: access-logs
        persistentVolumeClaim:
          claimName: access-logs-pvc
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 10s
      - setWeight: 50
      - pause:
          duration: 10s
      - setWeight: 75
      - pause:
          duration: 10s
      - setWeight: 100
