kc-helm-chart-app-main/kc-chart/templates/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kc-service
  namespace: keepcoding
  labels:
    app: kc-service
spec:
  selector:
    app: kc-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
